feat(chat, message): add endpoints: get all chats and messages by chat id for user
